fix: parallax move to right no longer causes overflow on log section

--- a/app/(pages)/(index-page)/_components/Hero/WhatIsHackdavis/WhatIsHackdavis.module.scss
+++ b/app/(pages)/(index-page)/_components/Hero/WhatIsHackdavis/WhatIsHackdavis.module.scss
@@ -1,6 +1,8 @@
 
 .container {
     background-color: white;
+    position: relative;
+    overflow: hidden;
 
     .text {
         display: flex;
